--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -260,6 +260,13 @@
                 <option value="CAFA">College of Architecture and Fine Arts (CAFA)</option>
                 <option value="CAL">College of Arts and Letters (CAL)</option>
                 <option value="CBEA">College of Business Education and Accountancy (CBEA)</option>
+                <option value="CCJE">College of Criminal Justice Education (CCJE)</option>
+                <option value="CHTM">College of Hospitality and Tourism Management (CHTM)</option>
+                <option value="CIT">College of Industrial Technology (CIT)</option>
+                <option value="CICT">College of Information and Communications Technology (CICT)</option>
+                <option value="CS">College of Science (CS)</option>
+                <option value="CSER">College of Sports, Exercise and Recreation (CSER)</option>
+                <option value="CSSP">College of Social Sciences and Philosophy (CSSP)</option>
               </select>
 
               <input type="text" id="collegeInput" />
