--- a/views/admin/configuration.ejs
+++ b/views/admin/configuration.ejs
@@ -249,7 +249,7 @@
           <% } %>
 
           <!-- Button to Reset Election (archives current config and empties values) -->
-          <form action="/resetElection" method="POST" style="margin-top: 10px">
+          <form action="/api/reset-election" method="POST" style="margin-top: 10px">
             <button type="submit" style="background-color: #000; color: #fff">Reset Election</button>
           </form>
         </section>
